force-app/main/default/objects/AAR_Appointment__c/AAR_Appointment__c.object-meta.xml
<CustomObject>
    <label>AAR Appointment</label>
    <nameField>
        <displayFormat>APT-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>