force-app/main/default/objects/AAR_Appointment__c/fields/Appointment_Category__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Category__c</fullName>
    <label>Appointment Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>UHN</fullName><default>false</default><label
        >UHN</label></value>
            <value><fullName>University</fullName><default>false</default><label
        >University</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>