force-app/main/default/objects/AAR_Appointment__c/fields/Appointment_Title__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Title__c</fullName>
    <label>Appointment Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>