force-app/main/default/objects/AAR_Appointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Primary</fullName><default>false</default><label
        >Primary</label></value>
            <value><fullName>Cross-Appointment</fullName><default
        >false</default><label>Cross-Appointment</label></value>
            <value><fullName>Status-Only</fullName><default
        >false</default><label>Status-Only</label></value>
            <value><fullName>Adjunct</fullName><default>false</default><label
        >Adjunct</label></value>
            <value><fullName>Honorary</fullName><default>false</default><label
        >Honorary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>