force-app/main/default/objects/AAR_Appointment__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <label>Faculty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>