force-app/main/default/objects/AAR_Appointment__c/fields/Is_Graduate_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Is_Graduate_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Graduate Appointment</label>
    <type>Checkbox</type>
</CustomField>